fix font size on iphone

--- a/style/projectsComponents/main.css
+++ b/style/projectsComponents/main.css
@@ -83,19 +83,13 @@ a:hover {
   transform: translateZ(0);
 }
 
-@media only screen and (max-width: 500px) {
-  .project-live a span {
-    font-size: 0.7em;
-  }
-}
-
 @media only screen and (max-width: 1055px) {
   .projects {
     align-items: center;
   }
 
   .project-live a span {
-    font-size: 0.1em;
+    font-size: 1em;
   }
 
   .domain {
@@ -144,5 +138,11 @@ a:hover {
 
   video#video5 {
     width: 97%;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .project-live a span {
+    font-size: 0.7em;
   }
 }
